name:          liquid
version:       0.0.0
license:       MIT
copyright:     (c) 2013 Pat Brisbin
author:        Pat Brisbin <pbrisbin@gmail.com>
maintainer:    Pat Brisbin <pbrisbin@gmail.com>
build-type:    Simple
cabal-version: >= 1.8

library
  ghc-options: -Wall

  hs-source-dirs: src

  exposed-modules: Text.Liquid.Context
                   Text.Liquid.Parse
                   Text.Liquid.Render
                   Text.Liquid

  build-depends: base == 4.*
               , unordered-containers
               , text
               , vector
               , aeson
               , parsec
               , scientific

test-suite spec
  type: exitcode-stdio-1.0

  ghc-options: -Wall -Werror

  hs-source-dirs: test

  main-is: Spec.hs

  build-depends: base  == 4.*
               , aeson
               , text
               , liquid
               , hspec >= 1.3
